be/src/exec/hdfs-table-sink.cc
@@ -59,8 +59,7 @@ HdfsTableSink::HdfsTableSink(const RowDescriptor& row_desc,
        table_id_(tsink.table_sink.target_table_id),
        select_list_texprs_(select_list_texprs),
        partition_key_texprs_(tsink.table_sink.hdfs_table_sink.partition_key_exprs),
-       overwrite_(tsink.table_sink.hdfs_table_sink.overwrite),
-       has_empty_input_batch_(false) {
+       overwrite_(tsink.table_sink.hdfs_table_sink.overwrite) {
   DCHECK(tsink.__isset.table_sink);
 }
 
@@ -324,7 +323,7 @@ Status HdfsTableSink::CreateNewTmpFile(RuntimeState* state,
 
 Status HdfsTableSink::InitOutputPartition(RuntimeState* state,
     const HdfsPartitionDescriptor& partition_descriptor,
-    OutputPartition* output_partition) {
+    OutputPartition* output_partition, bool empty_partition) {
   // Build the unique name for this partition from the partition keys, e.g. "j=1/f=foo/"
   // etc.
   stringstream partition_name_ss;
@@ -387,7 +386,7 @@ Status HdfsTableSink::InitOutputPartition(RuntimeState* state,
 
   // It is incorrect to initialize a writer if there are no rows to feed it. The writer
   // could incorrectly create an empty file or empty partition.
-  if (has_empty_input_batch_) return Status::OK();
+  if (empty_partition) return Status::OK();
 
   switch (partition_descriptor.file_format()) {
     case THdfsFileFormat::TEXT:
@@ -444,8 +443,8 @@ void HdfsTableSink::GetHashTblKey(const vector<ExprContext*>& ctxs, string* key)
   *key = hash_table_key.str();
 }
 
-inline Status HdfsTableSink::GetOutputPartition(
-   RuntimeState* state, const string& key, PartitionPair** partition_pair) {
+inline Status HdfsTableSink::GetOutputPartition(RuntimeState* state,
+    const string& key, PartitionPair** partition_pair, bool no_more_rows) {
   PartitionMap::iterator existing_partition;
   existing_partition = partition_keys_to_output_partitions_.find(key);
   if (existing_partition == partition_keys_to_output_partitions_.end()) {
@@ -458,7 +457,8 @@ inline Status HdfsTableSink::GetOutputPartition(
     }
 
     OutputPartition* partition = state->obj_pool()->Add(new OutputPartition());
-    Status status = InitOutputPartition(state, *partition_descriptor, partition);
+    Status status = InitOutputPartition(state, *partition_descriptor, partition,
+        no_more_rows);
     if (!status.ok()) {
       // We failed to create the output partition successfully. Clean it up now
       // as it is not added to partition_keys_to_output_partitions_ so won't be
@@ -478,7 +478,7 @@ inline Status HdfsTableSink::GetOutputPartition(
     state->per_partition_status()->insert(
         make_pair(partition->partition_name, partition_status));
 
-    if (!has_empty_input_batch_) {
+    if (!no_more_rows) {
       // Indicate that temporary directory is to be deleted after execution
       (*state->hdfs_files_to_move())[partition->tmp_hdfs_dir_name] = "";
     }
@@ -497,17 +497,20 @@ Status HdfsTableSink::Send(RuntimeState* state, RowBatch* batch, bool eos) {
   ExprContext::FreeLocalAllocations(output_expr_ctxs_);
   ExprContext::FreeLocalAllocations(partition_key_expr_ctxs_);
   RETURN_IF_ERROR(state->CheckQueryState());
-  DCHECK(eos || batch->num_rows() > 0);
-  has_empty_input_batch_ = batch->num_rows() == 0 && eos;
+  bool empty_input_batch = batch->num_rows() == 0;
+  // We don't do any work for an empty batch aside from end of stream finalization.
+  if (empty_input_batch && !eos) return Status::OK();
 
   // If there are no partition keys then just pass the whole batch to one partition.
   if (dynamic_partition_key_expr_ctxs_.empty()) {
     // If there are no dynamic keys just use an empty key.
     PartitionPair* partition_pair;
     // Populate the partition_pair even if the input is empty because we need it to
-    // delete the existing data for 'insert overwrite'.
-    RETURN_IF_ERROR(GetOutputPartition(state, ROOT_PARTITION_KEY, &partition_pair));
-    if (!has_empty_input_batch_) {
+    // delete the existing data for 'insert overwrite'. We need to handle empty input
+    // batches carefully so that empty partitions are correctly created at eos.
+    RETURN_IF_ERROR(GetOutputPartition(state, ROOT_PARTITION_KEY, &partition_pair,
+        empty_input_batch));
+    if (!empty_input_batch) {
       // Pass the row batch to the writer. If new_file is returned true then the current
       // file is finalized and a new file is opened.
       // The writer tracks where it is in the batch when it returns with new_file set.
@@ -529,7 +532,7 @@ Status HdfsTableSink::Send(RuntimeState* state, RowBatch* batch, bool eos) {
       string key;
       GetHashTblKey(dynamic_partition_key_expr_ctxs_, &key);
       PartitionPair* partition_pair = NULL;
-      RETURN_IF_ERROR(GetOutputPartition(state, key, &partition_pair));
+      RETURN_IF_ERROR(GetOutputPartition(state, key, &partition_pair, false));
       partition_pair->second.push_back(i);
     }
     for (PartitionMap::iterator partition = partition_keys_to_output_partitions_.begin();
