be/src/runtime/row-batch.h
@@ -135,8 +135,7 @@ class RowBatch {
   /// the tuple pool does not accumulate excessive memory.
   bool AtCapacity(MemPool* tuple_pool) {
     DCHECK(tuple_pool != NULL);
-    return AtCapacity() ||
-        (tuple_pool->total_allocated_bytes() > AT_CAPACITY_MEM_USAGE && num_rows_ > 0);
+    return AtCapacity() || tuple_pool->total_allocated_bytes() > AT_CAPACITY_MEM_USAGE;
   }
 
   TupleRow* GetRow(int row_idx) {
